refactor: 반환 타입 변경